# zlog

./: .travis.yml  CMakeLists.txt  install-deps.sh
ci/: cli-test.sh  install-ceph.sh
doc/: build.sh
objclass/: CMakeLists.txt  cls_zlog.cc  cls_zlog_client.cc  cls_zlog_client.h  cls_zlog_ops.h
src/include/zlog/: log.h
src/include/zlog/backend/: lmdb.h
src/kvstore/: bench.cc  db_impl.cc  db_impl.h  iterator_impl.cc  node.cc  node.h  node_cache.cc  snapshot.h  transaction_impl.cc  transaction_impl.h
src/libzlog/: log_impl.cc  log_impl.h
src/proto/: zlog.proto
src/storage/: test_backend.cc
src/storage/lmdb/: lmdb.cc
src/storage/ram/: ram.cc
